Modified RTHK Timer view

--- a/RTHK.html
+++ b/RTHK.html
@@ -48,7 +48,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -60,7 +60,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -86,7 +86,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -98,7 +98,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -125,7 +125,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -137,7 +137,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -168,7 +168,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -180,7 +180,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -207,7 +207,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -219,7 +219,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -249,7 +249,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -261,7 +261,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -291,7 +291,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -303,7 +303,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -333,7 +333,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -345,7 +345,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -392,7 +392,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -404,7 +404,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -432,7 +432,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -444,7 +444,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -472,7 +472,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -484,7 +484,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -512,7 +512,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -524,7 +524,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -554,7 +554,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
           </div>
         </div>
@@ -565,7 +565,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
           </div>
         </div>
@@ -610,7 +610,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -622,7 +622,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
@@ -650,7 +650,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1>
+              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_left">武汉大学</p> -->
           </div>
@@ -662,7 +662,7 @@
           <div>
             <div class="clearfix">
               <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1>
+              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
             </div>
             <!-- <p class="daibiao_right">西安交通大学</p> -->
           </div>
