Added reset button and fix timers

--- a/baihe.html
+++ b/baihe.html
@@ -193,8 +193,9 @@
       </div>
     </div>
     <div class="row text-center">
-      <button id="doubleBtn" class="btn btn-primary btn-xs">切换计时</button>
-      <button id="doubleStopBtn" class="btn btn-primary btn-xs">停止计时</button>
+      <button id="doubleBtn_1" class="btn btn-primary btn-xs">切换计时</button>
+      <button id="doubleStopBtn_1" class="btn btn-primary btn-xs">停止计时</button>
+      <button id="doubleResetBtn_1" class="btn btn-primary btn-xs">重置计时</button>
     </div>
 
   </div>
@@ -288,8 +289,9 @@
       </div>
     </div>
     <div class="row text-center">
-      <button id="doubleBtn" class="btn btn-primary btn-xs">切换计时</button>
-      <button id="doubleStopBtn" class="btn btn-primary btn-xs">停止计时</button>
+      <button id="doubleBtn_2" class="btn btn-primary btn-xs">切换计时</button>
+      <button id="doubleStopBtn_2" class="btn btn-primary btn-xs">停止计时</button>
+      <button id="doubleResetBtn_2" class="btn btn-primary btn-xs">重置计时</button>
     </div>
 
   </div>
