Added reset buttons

--- a/RTHK.html
+++ b/RTHK.html
@@ -595,6 +595,7 @@
       <div class="row text-center">
         <button id="doubleBtn" class="btn btn-primary btn-xs">切换计时</button>
         <button id="doubleStopBtn" class="btn btn-primary btn-xs">停止计时</button>
+        <button id="doubleResetBtn" class="btn btn-primary btn-xs">重置计时</button>
       </div>
 
     </div>
