--- a/preliminary-contest.html
+++ b/preliminary-contest.html
@@ -572,7 +572,6 @@
         </div>
       </div>
 
-
       <div class="row">
         <div class="col-lg-6 text-center">
           <h1 id="timedown6"></h1>
@@ -596,6 +595,7 @@
       <div class="row text-center">
         <button id="doubleBtn" class="btn btn-primary btn-xs">切换计时</button>
         <button id="doubleStopBtn" class="btn btn-primary btn-xs">停止计时</button>
+        <button id="doubleResetBtn" class="btn btn-primary btn-xs">重置计时</button>
       </div>
 
     </div>
