Correct RTHK time

--- a/RTHK.html
+++ b/RTHK.html
@@ -76,7 +76,7 @@
 
     </div>
 
-    <!-- 第一回合 陈词与质询-->
+    <!-- 第一回合 陈词-->
     <div class="container-fluid" style="position: relative">
       <div class="row text-center margin-top-sm">
         <h1>正方一辩陈词</h1>
@@ -115,50 +115,9 @@
       </div>
 
     </div>
-
-    <div class="container-fluid" style="position: relative">
-      <div class="row text-center margin-top-sm">
-        <h1>反方一辩对正方一辩进行质询</h1>
-      </div>
-      <div class="row margin-top-md">
-        <div class="col-lg-5">
-          <div>
-            <div class="clearfix">
-              <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
-            </div>
-            <!-- <p class="daibiao_left">武汉大学</p> -->
-          </div>
-        </div>
-        <div class="col-lg-2 text-center">
-          <img src="assets/images/vs_white.png" style="height:100px;" alt="">
-        </div>
-        <div class="col-lg-5">
-          <div>
-            <div class="clearfix">
-              <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
-            </div>
-            <!-- <p class="daibiao_right">西安交通大学</p> -->
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 id="timedown1_1"></h1>
-          <button id="beginBtn1_1" class="btn btn-primary btn-xs">开始</button>
-          <button id="stopBtn1_1" class="btn btn-primary btn-xs">停止</button>
-          <button id="resetBtn1_1" class="btn btn-primary btn-xs">重置</button>
-        </div>
-      </div>
-
-
-    </div>
     <!-- 第一回合结束 -->
 
-
-    <!-- 第二回合 陈词与质询-->
+    <!-- 第二回合 陈词-->
     <div class="container-fluid" style="position: relative">
       <div class="row text-center margin-top-sm">
         <h1>反方一辩陈词</h1>
@@ -193,45 +152,6 @@
           <button id="beginBtn2" class="btn btn-primary btn-xs">开始</button>
           <button id="stopBtn2" class="btn btn-primary btn-xs">停止</button>
           <button id="resetBtn2" class="btn btn-primary btn-xs">重置</button>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="container-fluid" style="position: relative">
-      <div class="row text-center margin-top-sm">
-        <h1>正方一辩对反方一辩进行质询</h1>
-      </div>
-      <div class="row margin-top-md">
-        <div class="col-lg-5">
-          <div>
-            <div class="clearfix">
-              <img src="assets/images/zheng.png" alt="..." class="img-circle bianfang_image pull-right">
-              <!-- <h1 class="pull-right bian_name_left"><strong>从未得到</strong>更可悲</h1> -->
-            </div>
-            <!-- <p class="daibiao_left">武汉大学</p> -->
-          </div>
-        </div>
-        <div class="col-lg-2 text-center">
-          <img src="assets/images/vs_white.png" style="height:100px;" alt="">
-        </div>
-        <div class="col-lg-5">
-          <div>
-            <div class="clearfix">
-              <img src="assets/images/fan.png" alt="..." class="img-circle bianfang_image pull-left">
-              <!-- <h1 class="pull-left bian_name_right"><strong>得而复失</strong>更可悲</h1> -->
-            </div>
-            <!-- <p class="daibiao_right">西安交通大学</p> -->
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 id="timedown2_1"></h1>
-          <button id="beginBtn2_1" class="btn btn-primary btn-xs">开始</button>
-          <button id="stopBtn2_1" class="btn btn-primary btn-xs">停止</button>
-          <button id="resetBtn2_1" class="btn btn-primary btn-xs">重置</button>
         </div>
       </div>
 
