Correct RTHK text

--- a/RTHK.html
+++ b/RTHK.html
@@ -243,10 +243,10 @@
     </div>
     <!-- 第四回合结束 -->
 
-    <!-- 第四点五回合 双方二辩对辩-->
+    <!-- 第四点五回合 自由人对辩-->
     <div class="container-fluid" style="position: relative">
       <div class="row text-center margin-top-sm">
-        <h1>双方二辩对辩</h1>
+        <h1>自由人对辩</h1>
       </div>
       <div class="row margin-top-md">
         <div class="col-lg-5">
